# hk_camera

./: CMakeLists.txt  README.md  package.xml
include/: hk_camera.hpp
launch/: take_a_photo_launch.py
src/: hk_camera.cpp  hk_camera_client.cpp  hk_camera_compressed.cpp  hk_camera_compressed_pub.cpp  hk_camera_compressed_pub_test.cpp  hk_camera_compressed_pub_test_reliable.cpp  hk_camera_compressed_sub.cpp  hk_camera_compressed_sub_test.cpp  hk_camera_compressed_sub_test_reliable.cpp  hk_camera_server.cpp
